aop-two可以修改返回前端的数据

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<modules>
 		<module>aop-one</module>
+		<module>aop-two</module>
 	</modules>
 	<packaging>pom</packaging>
 
